# QuadrantPhotodiode

./: .gitignore  README.md  requirements.txt  setup.cfg
examples/: example.ipynb
examples/.ipynb_checkpoints/: example-checkpoint.ipynb
quadrantphotodiode/: quadrantphotodiode.py
tests/: tests.ipynb
