[metadata]
name = Quadrant Photodiode
author = kricki
summary = QPD
description-file =
    README.md
description-content-type = text/markdown
home-page = https://github.com/kricki/QuadrantPhotodiode
requires-python = >=3.6.0
classifier =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Programming Language :: Python :: 3.6
  Topic :: Scientific/Engineering

[files]
packages =
    quadrantphotodiode
